# verifex-omnium

./: .gitignore  README.md  pyproject.toml
src/verifex_omnium/: __init__.py  blockchain.py  cli.py  core.py  embeddings.py
tests/: test_core.py
