[tool.poetry]
name = "verifex-omnium"
version = "0.1.0"
description = "Blockchain-native content verification fighting deep fakes and misinformation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "verifex_omnium", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0.0"
web3 = "^6.0.0"
pydantic = "^2.0.0"
transformers = "^4.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
